# AutoMLModelTrainer

./: README.md  generate_report.py  model_train_predict.ipynb  pyproject.toml  run_model_eval_with_merge.py  train_mex_reloan_main_v6.py
batch_scripts/: model_eval_with_merge.py  oracle_train_reloan_v6.py  train_model_v6_BG_script.py  train_reloan_main_v6.py
model_eval_metric/: modelEvaluation.py  modelEvaluation2.py  modelFillEvaluation.py  psiCalculation.py
model_pipeline/: __init__.py  generate_report.py  load_data.py  merge_basicinfo_features.py  metrics.py  model_eval.py  model_eval_nb.py  predict_model.py  split_data.py  train_model.py  tune_model_params.py
model_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
orig_notebook_files/: model_eval.ipynb
specs/model_pipeline/: plan.md  quickstart.md  spec.md  tasks.md
tests/: conftest.py  test_load_data.py  test_predict_model.py  test_smoke_imports.py  test_split_data.py  test_train_model.py  test_tune_model_params.py  test_types_and_metrics.py
tests/acceptance/: test_load_data_acceptance.py  test_predict_acceptance.py  test_split_data_acceptance.py  test_train_model_acceptance.py  test_tune_acceptance.py
