[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "model-pipeline"
version = "0.1.0"
description = "Offline load / split / train / predict / tune utilities (LGB-first)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["model_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
source = ["model_pipeline"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
# Per tasks.md, enforce ≥50% at phase gates via pytest-cov CLI / CI; omit global fail_under for near-empty early phases.
show_missing = true
